--- a/index.html
+++ b/index.html
@@ -60,6 +60,16 @@
     <main>
 		 <header><h3 class="slogan">You drink our coffee, we make large bucks!</h3></header>
         <div id="coffee-cup">Coffee data goes here</div>
+		<div>
+			<h3>Here are the specials for each day of the week</h3>
+			<p><a href="?day=0">Sunday</a></p>
+			<p><a href="?day=1">Monday</a></p>
+			<p><a href="?day=2">Tuesday</a></p>
+			<p><a href="?day=3">Wednesaday</a></p>
+			<p><a href="?day=4">Thursday</a></p>
+			<p><a href="?day=5">Friday</a></p>
+			<p><a href="?day=6">Saturday</a></p>
+		</div>
 		 <!--
 		 <p>
     		 <img src="images/pumpkin-spice-latte.jpg" alt="Our Pumpkin Spice Latte tastes great on a Fall Day!" id="coffee" />
